--- a/angular.json
+++ b/angular.json
@@ -72,7 +72,8 @@
                         "styles": [
                             "src/assets/css/flags.min.css",
                             "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-                            "src/styles.scss"
+                            "src/styles.scss",
+                            "src/app/themes/dark-theme.scss"
                         ],
                         "scripts": [
                             "src/assets/tinymce/tinymce.min.js",
